--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <!-- Replace the lines in this body with your content. -->
+    <h1>This is my change</h1>
     <h1>CS 1030 - Web page Project</h1>
     <img src="logo.png">
     <p>Hello world!</p>
