--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>CS 1030 Web Page Project</title>
     <!-- Replace the content in the following line with your name. -->
     <meta name="author" content="REPLACE WITH YOUR NAME">
+    <link rel="stylesheet" type="text/css" href=style.css>
   </head>
   <body>
     <!-- Replace the lines in this body with your content. -->
